# importance_sampling_nqs

./: .gitignore  README.md  dokcwd  energy_ref_litt.json  main.py  pyproject.toml
conf/: base.yaml  infidelity_tfi.yaml  li2o_gs.yaml  n2_gs.yaml  qchem.yaml  snr_analysis.yaml  snr_analysis_n2.yaml  train_is.yaml  vit1d.yaml  vit_j1j2.yaml  vit_large_nosym.yaml
conf/ansatz/: cnn.yaml  cnn_fs.yaml  diag_wrapper.yaml  log_state.yaml  mlp.yaml  nnbf.yaml  rbm.yaml  rbmsym.yaml  vit.yaml  vit1d.yaml  vit_large.yaml
conf/callbacks/: compute_snr.yaml  save_exact_err.yaml  save_sampler_state.yaml
conf/callbacks_list/: save_err_approx.yaml
conf/is_distrib/: default.yaml  overdispersed.yaml
conf/model/: heisenberg1d.yaml  heisenberg2d.yaml  ising.yaml  j1j2.yaml  lithium_oxide.yaml  nitrogen.yaml  xxz.yaml
conf/sampler/: exact.yaml  exchange.yaml  fermionhop.yaml  hamiltonian.yaml
conf/solver_fn/: cg.yaml  cholesky.yaml  pinv_smooth.yaml
conf/task/: fullsum_gs.yaml  infidelity_mc.yaml  train.yaml  vmc_gs.yaml
conf/vstate/: fullsum.yaml  mcstate.yaml
data/infidelity_states/: state_1.25000.nk  state_1.30000.nk
notebooks/: infidelity_optim.ipynb  j1j2_vmc.ipynb  nitrogen_vmc.ipynb  xxz_vmc.ipynb
