[project]
name = "importance_sampling_nqs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["packages/**"]

[tool.hatch.build.targets.wheel]
sources = ["packages"]

[tool.hatch.metadata]
allow-direct-references = true
