[project]
name = "importance_sampling_nqs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax>=0.4.35",
    "netket>=3.16.0",
    "einops>=0.6",
    "hydra-core>=1.3",
    "matplotlib>=3.10.1",
    "networkx>=3.4.0",
    "pubchempy==1.0.4",
    "pyscf==2.9.0",
    "sparse>=0.15"
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["packages/**"]

[tool.hatch.build.targets.wheel]
sources = ["packages"]

[tool.hatch.metadata]
allow-direct-references = true
